Update search results: Fix stretched links in chrome

--- a/src/sass/sdk/components/_search.scss
+++ b/src/sass/sdk/components/_search.scss
@@ -45,3 +45,8 @@
 .page-header {
     background-color: #FFEECC !important;
 }
+// hack to make bootstrap streched links not overlap whole page
+.search-result-row {
+    position: relative !important;
+    transform: scale(1); // this is a fix for chrome
+}
